Used PrettyTime to print run time.

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             </plugin>
         </plugins>
     </build>
+    <dependencies>
+        <dependency>
+            <groupId>org.ocpsoft.prettytime</groupId>
+            <artifactId>prettytime</artifactId>
+            <version>3.2.7.Final</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
