Implemented basic sqlite functionality.

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>prettytime</artifactId>
             <version>3.2.7.Final</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.7.2</version>
+        </dependency>
     </dependencies>
 
 
