--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cz.gisat</groupId>
     <artifactId>tiledownloader</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0.1</version>
 
     <build>
         <plugins>
